--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-plugin-import": "^1.6.2",
     "react-scripts": "1.0.17"
   },
